--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,7 @@ li {
 }
 .sticky {
   position: fixed;
+  z-index: 999;
   top: 0px;
   width: 100%;
   background-color:#f5f7fb;
@@ -386,6 +387,15 @@ li {
 #link:hover{
   color: #00b596;
 }
+#link1 {
+  color: #a3b1bf;
+  text-decoration: none;
+  font-size:15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+#link1:hover{
+  color: #00b596;
+}
 #link:hover #movepic{
   padding-left: 10px;
   transition:.5s ease;
@@ -446,15 +456,42 @@ h3 {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-.button1 ,.button2{
+.button1 ,.button2,.button4{
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   width: 118px;
   height: 47px;
   color: white;
   background-color: #00bc9c;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
+}
+.minibl,.minibr {
+  border: none;
+  border-radius: 5px;
+  background-color: #506a85;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  width: 63px;
+  height: 63px;
+}
+#cbutton1,#cbutton2 {
+  margin-top: 425px;
+  position: absolute;
+  opacity: 50%;
+}
+#cbutton1:hover,#cbutton2:hover {
+  opacity: 100%;
+  transition: .3s ease;
+}
+#cbutton2 {
+  margin-left: 1.51%;
+  z-index: 300;
+}
+#cbutton1 {
+  margin-left: 95.26%;
+  z-index: 300;
 }
 #main {
   width: 100%;
@@ -541,4 +578,67 @@ h3 {
   margin-left: 130px;
   border-radius: 4px;
   padding: 6px 6px 6px 6px;
+}
+#firsts {
+  position: absolute;
+  margin: 0px;
+  padding-left: 27.2%;
+  padding-top: 250px;
+  top: 0;
+}
+.in1,.in2,.in3,.in4,.in5{
+  position: absolute;
+  margin: 0px;
+  padding: 150px 27.2% 150px 27.2%;
+  display: none;
+}
+.in1 p ,.in2 p,.in3 p{
+  font-weight: bold;
+  color: white;
+  font-size: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.in1 p {
+  text-align: center;
+}
+.in2 p {
+  text-align: right;
+}
+.in3 p {
+  text-align: left;
+  background-color: red;
+}
+
+.in1 p.smaller1 {
+
+  color: #a3b1bf;
+  font-size: 15px;
+  text-align: center;
+  margin: 0px;
+  margin-top: -50px;
+  padding-left: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.in2 p.smaller2 {
+
+  color: #a3b1bf;
+  font-size: 15px;
+  text-align: right;
+  margin: 0px;
+  margin-top: -50px;
+  padding-left: 35px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.in3 p.smaller3 {
+
+  color: #a3b1bf;
+  font-size: 15px;
+  text-align:left;
+  margin: 0px;
+  margin-top: -50px;
+  padding-left: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
